[tool.poetry]
name = "rgContent"
version = "0.1.0"
description = "Stuff to keep me sane"
authors = ["HaoZeke <rohit.goswami@aol.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.8"
seaborn = "^0.9.0"
matplotlib = "^3.1"
pandas = "^0.25.1"
numpy = "^1.17"
scipy = "^1.3"
sklearn = "^0.0.0"
ipykernel = "^5.1"
jupyter = "^1.0"
tensorflow = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
